--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<div>
-  <h1>Chat Room</h1>
+<div class="container">
+  <h1>{{title}}</h1>
+  <div class="join-chat">
+    <input type="text" name="name" id="name">
+    <button>Join</button>
+  </div>
+
+  <div class="chat-container">
+    <cr-chatbox></cr-chatbox>
+    <cr-chatbox></cr-chatbox>
+  </div>
 </div>
