--- a/src/app/chats/chatbox/chatbox.component.css
+++ b/src/app/chats/chatbox/chatbox.component.css
@@ -9,9 +9,14 @@
   flex-direction: column;
 }
 
-.user-chat-box h2 {
-  padding: 5px;
+.chat-header {
+  display: flex;
   border: 1px solid black;
+  justify-content: space-between;
+}
+
+.chat-header h2 {
+  padding: 5px;
   margin-bottom: 1rem;
 }
 
@@ -25,24 +30,6 @@
 
 #chat-messages-list > div {
   padding: 5px;
-}
-
-.message {
-  display: inline-block;
-  padding: 10px;
-  background-color: #a0dcff;
-}
-
-.message sub {
-  display: block;
-}
-
-.other-message {
-  text-align: left;
-}
-
-.self-message {
-  text-align: right;
 }
 
 .message-input-container {
