--- a/src/app/chats/chatbox/chatbox.component.html
+++ b/src/app/chats/chatbox/chatbox.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="message-input-container">
-    <input type="text" placeholder="Type message here...">
-    <button>Send</button>
+    <input type="text" placeholder="Type message here..." [(ngModel)] = 'messageText'>
+    <button (click) = 'sendMessage()'>Send</button>
   </div>
 </div>
