--- a/src/app/chats/chatbox/chatbox.component.html
+++ b/src/app/chats/chatbox/chatbox.component.html
@@ -1,11 +1,11 @@
 <div class="user-chat-box">
   <div class="chat-header">
     <h2>{{name}}</h2>
-    <button>X</button>
+    <button (click) = 'leaveChat()'>X</button>
   </div>
 
   <div id="chat-messages-list">
-    <cr-message></cr-message>
+    <ng-container #messageContainer></ng-container>
   </div>
 
   <div class="message-input-container">
