--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,10 +2,12 @@
   /* position: relative;
   top: 50%;
   transform: translateY(-50%); */
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #78c7c4;
 }
 
 h1 {
