--- a/src/styles.css
+++ b/src/styles.css
@@ -18,9 +18,9 @@ body {
   line-height: 1.4;
   color: #333;
 
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     -115deg,
     rgba(58, 58, 158, 0.8),
     rgba(136, 136, 206, 0.7)
-  );
+  ); */
 }
