--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,8 @@
 .container {
-  /* position: relative;
-  top: 50%;
-  transform: translateY(-50%); */
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #78c7c4;
 }
 
 h1 {
@@ -37,4 +32,5 @@ h1 {
 .chat-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
