--- a/src/styles.css
+++ b/src/styles.css
@@ -17,10 +17,5 @@ body {
   font-weight: 400;
   line-height: 1.4;
   color: #333;
-
-  /* background-image: linear-gradient(
-    -115deg,
-    rgba(58, 58, 158, 0.8),
-    rgba(136, 136, 206, 0.7)
-  ); */
+  background-color: #78c7c4;
 }
